fixed broken gallery images, corrected horizontal overflow

--- a/css/about.css
+++ b/css/about.css
@@ -15,6 +15,7 @@ body {
     background-image: url("../images/hires/about_bg.jpg"), url("../images/lowres/about_bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+    overflow-x: hidden;
 }
 
 .about {
