--- a/css/archive.css
+++ b/css/archive.css
@@ -13,6 +13,7 @@
 
 body {
     background-color: rgb(0,0,0);
+    overflow-x: hidden;
 }
 
 .banner {
